# PseudoFlowOperator

./: README.md  pyproject.toml  requirements.txt
cmd/operator/: __init__.py  cli.py  main.py
deploy/: crd_pseudoflow.yaml  deployment.yaml  rbac.yaml
docs/: TECH_SPEC_PseudoFlowOperator_Full.md
examples/: 01-simple-apply.yaml  02-labels-loop.yaml
pseudoflow/: __init__.py  engine.py  kube.py  templating.py
pseudoflow/engine/: context.py  dispatcher.py  runner.py
pseudoflow/kube/: __init__.py  client.py  crd.py  exec.py  resources.py  wait.py
pseudoflow/steps/: apply.py  apply_file.py  config_file.py  delete.py  delete_file.py  eval.py  exec.py  exec_node.py  include.py  log.py  patch_file.py  patch_label.py  remove_label.py  script.py  set_label.py  sleep.py  template.py  wait_for.py
pseudoflow/util/: __init__.py  shell.py  templating.py
