
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pseudoflow-operator"
version = "0.1.0"
description = "Kubernetes operator for PseudoFlow CRD"
requires-python = ">=3.11"
dependencies = [
  "kopf>=1.37.4",
  "kubernetes>=30.1.0",
  "pyyaml>=6.0.2",
]

[project.scripts]
pseudoflow-operator = "cmd.operator.main:main"
